# myFavNotes

./: CMakeLists.txt  readme.md
forms/: DBDialog.ui  MainWindow - Kopie.ui  MainWindow.ui  NoteWidget.ui  TextInputDialog.ui
headers/: DBDialog.h  MainWindow.h  NoteListDelegate.h  NoteListView.h  NoteWidget.h  Settings.h  SideBarDelegate.h  SideBarListView.h  SortFilterProxyModelNotes.h  TextInputDialog.h
installer/config/: config.xml
resources/: icon.icns  resources.qrc  style.qss
sources/: DBDialog.cpp  MainWindow.cpp  MainWindow_actions.cpp  MainWindow_database.cpp  MainWindow_settings.cpp  NoteListDelegate.cpp  NoteListView.cpp  NoteWidget.cpp  Settings.cpp  SideBarDelegate.cpp  SideBarListView.cpp  SortFilterProxyModelNotes.cpp  TextInputDialog.cpp  main.cpp
